# ROS-turtlebot_followingball

./: CMakeLists.txt  README.md  package.xml
include/: gazebo_ros_link_attacher.h
launch/: ball_teleop.launch  robot_controller.launch  simulator.launch  simulator_with_arm.launch
models/yellow_ball/: model.config  model.sdf
msg/: BallMoveInfo.msg  ImageInfo.msg
plugins/: ball_moving_plugin.cc  gazebo_ros_link_attacher.cpp
scripts/: manipulation_command.py  test_move.py  tracking_command.py  video_capture.py
scripts/tests/: ball_pick.py  ball_tracking_v0.py  get_joint0.py  test_move.py
scripts/tests/image_processing/: check_image_info.py  get_image_process.py
scripts/tests/pick/: attach.py  detach.py
src/: ball_teleop_key.py  constants.py  image_processing.py  manipulation_driver.py  tracking_driver.py
worlds/: empty_with_yellow_ball.world
